name:           globber
version:        1.0.0
synopsis:       glob matching in Haskell
build-type:     Simple
cabal-version:  >= 1.8

extra-source-files:
  README.md

library
  exposed-modules:
    Globber
  build-depends:
    base
  ghc-options: -Wall

test-suite test-globber
  type: exitcode-stdio-1.0
  main-is: TestGlobber.hs
  build-depends:
    base,
    globber,
    hspec
  ghc-options: -Wall

